@@ -1,3 +1,3 @@
-#sid jessie sid-oracle#9
-#wheezy quantal jessie#8
-#trusty saucy raring precise#7
+#sid jessie sid-oracle saucy trusty utopic#9
+#wheezy jessie#8
+#precise#7
