@@ -6,15 +6,15 @@ Priority: optional
 Build-Depends:
  bison,
  cmake (>= 2.8),
-#sid jessie wheezy quantal raring saucy sid-oracle trusty# debhelper (>= 9),
+#sid jessie wheezy saucy sid-oracle trusty utopic# debhelper (>= 9),
 #precise# debhelper (>= 7),
  flex,
  grass-dev,
  libexpat1-dev,
  libfcgi-dev,
-#sid jessie sid-oracle trusty# libgdal-dev (>= 1.10.1-0~),
+#sid jessie sid-oracle trusty utopic# libgdal-dev (>= 1.10.1-0~),
 #precise# libgdal-dev (>= 1.9.0) | libgdal1-dev (<< 1.9.0),
-#quantal raring saucy# libgdal-dev (>= 1.9.0),
+#saucy# libgdal-dev (>= 1.9.0),
 #wheezy# libgdal1-dev,
  libgeos-dev (>= 3.0.0),
  libgsl0-dev,
@@ -23,20 +23,19 @@ Build-Depends:
  libqt4-dev (>= 4.7.0),
  libqt4-opengl-dev,
  libqtwebkit-dev,
-#sid jessie wheezy quantal sid-oracle# libqwt-dev,
-#precise raring saucy trusty# libqwt5-qt4-dev,
+#sid jessie wheezy sid-oracle# libqwt-dev,
+#precise saucy trusty utopic# libqwt5-qt4-dev,
  libspatialite-dev,
  libsqlite3-dev,
  libspatialindex-dev,
  pkg-config,
  pyqt4-dev-tools,
-#precise quantal raring saucy wheezy# python,
-#precise raring saucy# python-central (>=0.5),
-#raring saucy wheezy# python-dev,
-#raring saucy# libpython2.7-dev,
-#quantal# python-dev (>= 2.6.6-3~),
-#sid jessie sid-oracle trusty# python-all (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~),
-#sid jessie wheezy precise quantal raring saucy sid-oracle trusty# python-qt4 (>= 4.1.0), python-qt4-dev,
+#precise saucy wheezy# python,
+#precise saucy# python-central (>=0.5),
+#saucy wheezy# python-dev,
+#saucy# libpython2.7-dev,
+#sid jessie sid-oracle trusty utopic# python-all (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~),
+#sid jessie wheezy precise saucy sid-oracle trusty utopic# python-qt4 (>= 4.1.0), python-qt4-dev,
  python-sip (>= 4.5.0),
  python-sip-dev (>= 4.5.0),
  libosgearth-dev,
@@ -52,10 +51,10 @@ Build-Depends:
  spawn-fcgi, lighttpd, poppler-utils
 Build-Conflicts: libqgis-dev, qgis-dev
 #sid jessie sid-oracle#Standards-Version: 3.9.5
-#wheezy quantal#Standards-Version: 3.9.3
-#precise raring saucy trusty#Standards-Version: 3.8.4
+#wheezy#Standards-Version: 3.9.3
+#precise saucy trusty utopic#Standards-Version: 3.8.4
 #sid jessie sid-oracle#X-Python-Version: >= 2.7, << 2.8
-#wheezy precise quantal raring saucy trusty#XS-Python-Version: current
+#wheezy precise saucy trusty utopic#XS-Python-Version: current
 Vcs-Browser: https://github.com/qgis/QGIS/
 Vcs-Git: https://github.com/qgis/QGIS.git
 Homepage: http://qgis.org/
@@ -177,9 +176,9 @@ Section: libdevel
 Depends:
  grass-dev,
  libexpat1-dev,
-#sid jessie sid-oracle trusty# libgdal-dev (>= 1.10.1-0~),
+#sid jessie sid-oracle trusty utopic# libgdal-dev (>= 1.10.1-0~),
 #precise# libgdal-dev (>= 1.9.0) | libgdal1-dev (<< 1.9.0),
-#quantal raring saucy# libgdal-dev (>= 1.9.0),
+#saucy# libgdal-dev (>= 1.9.0),
 #wheezy# libgdal1-dev,
  libgeos-dev (>= 3.0.0),
  libgsl0-dev,
@@ -254,14 +253,14 @@ Depends:
  python-dateutil,
  python-tz,
  python-six,
-#sid jessie quantal trusty sid-oracle# python-pyspatialite,
+#sid jessie trusty utopic sid-oracle# python-pyspatialite,
  libqgispython{QGIS_ABI},
  ${shlibs:Depends},
  ${python:Depends},
  ${misc:Depends},
  ${sip:Depends}
 Provides: ${python:Provides}
-#wheezy precise quantal raring#XB-Python-Version: ${python:Versions}
+#wheezy precise#XB-Python-Version: ${python:Versions}
 Description: Python bindings to QGIS
  QGIS is a Geographic Information System (GIS) which manages, analyzes and
  display databases of geographic information.
