@@ -23,7 +23,7 @@ ifeq (,$(DISTRIBUTION))
 	DISTRIBUTION := $(shell dpkg-parsechangelog --format rfc822 | sed -ne "s/^Distribution: //p")
 endif
 
-ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"wheezy jessie precise quantal raring saucy trusty sid-oracle"))
+ifneq ($(DISTRIBUTION),$(findstring $(DISTRIBUTION),"wheezy jessie precise saucy trusty utopic sid-oracle"))
 	DISTRIBUTION := sid
 endif
 
@@ -69,7 +69,7 @@ ifneq (,$(filter parallel=%,$(DEB_BUILD_OPTIONS)))
 	MAKEFLAGS += -j$(NUMJOBS)
 endif
 
-ifneq (,$(findstring $(DISTRIBUTION),"wheezy jessie sid precise quantal raring saucy"))
+ifneq (,$(findstring $(DISTRIBUTION),"wheezy jessie sid precise saucy"))
 	CMAKE_OPTS += -DWITH_PYSPATIALITE=TRUE
 endif
 
@@ -77,7 +77,7 @@ ifneq (,$(findstring $(DISTRIBUTION),"sid sid-oracle"))
 	CMAKE_OPTS += -DPOSTGRES_LIBRARY=/usr/lib/$(DEB_BUILD_MULTIARCH)/libpq.so
 endif
 
-ifneq (,$(findstring $(DISTRIBUTION),"jessie raring saucy trusty sid sid-oracle"))
+ifneq (,$(findstring $(DISTRIBUTION),"jessie saucy trusty utopic sid sid-oracle"))
 	CMAKE_OPTS += -DPYTHON_LIBRARY=/usr/lib/$(DEB_BUILD_MULTIARCH)/libpython2.7.so
 endif
 
