@@ -3,8 +3,9 @@ qgis (2.5.0) UNRELEASED; urgency=medium
   * New development version 2.5 after branch of 2.4
   * add libqscintilla2-dev as build dependency
   * add remove sqlanywhere plugin and provider
+  * drop support for ubuntu quantal and raring and add utopic
 
- -- Jürgen E. Fischer <jef@norbit.de>  Tue, 08 Jul 2014 08:32:40 +0200
+ -- Jürgen E. Fischer <jef@norbit.de>  Tue, 15 Jul 2014 09:09:52 +0200
 
 qgis (2.4.0) unstable; urgency=medium
 
